New_idea/IGARSS/numbers.txt
In [1]: import numpy as np

In [2]: x = np.array([96,87,92,86,97,97,94,94,97,97,97,89,89,97,96,91,98,96,94,9
   ...: 3,90])

In [3]: np.mean(x)
Out[3]: 93.666666666666671

In [4]: y = np.array([76,66,71,66,79,97,80,83,84,88,77,74,75,80,88,77,79,95,74,8
   ...: 6,78])

In [5]: np.mean(y)
Out[5]: 79.666666666666671

In [6]: z = np.array([83,74,77,57,40,54,83,83,71,39,48,82,53,63,49,56,38,51,59,4
   ...: 8,61])

In [7]: np.mean(y)
Out[7]: 79.666666666666671

In [8]: np.mean(z)
Out[8]: 60.428571428571431

In [9]: a = np.array([50,52,53,48,45,53,47,49,48,45,54,48,47,52,54,50,46,53,53,6
   ...: 3,59)]
  File "<ipython-input-9-a037d26f336d>", line 1
    a = np.array([50,52,53,48,45,53,47,49,48,45,54,48,47,52,54,50,46,53,53,63,59)]
                                                                                ^
SyntaxError: invalid syntax


In [10]: a = np.array([50,52,53,48,45,53,47,49,48,45,54,48,47,52,54,50,46,53,53,
    ...: 63,59])

In [11]: np.mean(a)
Out[11]: 50.904761904761905

In [12]: 
